[package]
name = "inquest"
version = "0.1.0"
authors = ["Dan Rammer <hamersaw@gmail.com>"]

[dependencies]
docopt = "0.6"
futures = "0.1"
futures-cpupool = "0.1"
grpc = { git = "https://github.com/stepancheg/grpc-rust" }
protobuf = { git = "http://github.com/stepancheg/rust-protobuf" }
rustc-serialize = "0.3"
toml = "0.2"
